@@ -1,3 +1,9 @@
+2003-06-10  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-directory-background.c:
+	Don't update the desktop background image four times
+	for each change in the desktop directory.
+
 2003-06-09  Dave Camp  <dave@ximian.com>
 
 	* libnautilus-private/nautilus-icon-canvas-item.c:
